<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/color_app"
        android:orientation="vertical"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="50sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descRegister"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="5dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="20dp"/>

        <EditText
            android:id="@+id/r_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:maxLines="1"
            android:padding="10dip"
            android:background="@drawable/style_edittext"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/r_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:maxLines="1"
            android:padding="10dip"
            android:background="@drawable/style_edittext"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
             />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"/>
        <EditText
            android:id="@+id/r_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_username"
            android:maxLines="1"
            android:padding="10dip"
            android:background="@drawable/style_edittext"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"/>
        <EditText
            android:id="@+id/r_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_username"
            android:maxLines="1"
            android:padding="10dip"
            android:background="@drawable/style_edittext"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"/>
        <EditText
            android:id="@+id/r_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_phone"
            android:maxLines="1"
            android:inputType="phone"
            android:padding="10dip"
            android:background="@drawable/style_edittext"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"/>

        <EditText
            android:id="@+id/r_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/enter_password"
            android:textColorHint="@color/gray"
            android:padding="10dip"
            android:background="@drawable/style_edittext"
            android:textColor="@color/black"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_gender"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"/>
        <RadioGroup
            android:id="@+id/r_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton android:id="@+id/r_men"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:text="@string/men"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                />
            <RadioButton android:id="@+id/r_femal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/Fem"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                />
        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:layout_width="90dp"
                android:layout_height="90dp"
                app:cardCornerRadius="90dp"
                android:layout_margin="10dp"
                >
                <ImageView
                    android:id="@+id/imgView"
                    android:layout_height="90dp"
                    android:layout_width="90dp"
                    android:scaleType="centerCrop"
                    />
            </androidx.cardview.widget.CardView>
            <Button
                android:id="@+id/buttonLoadPicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="Load Picture"
                android:layout_gravity="center"></Button>

        </LinearLayout>

        <Button
            android:layout_width="320dp"
            android:layout_height="55dp"
            android:text="@string/register"
            android:textSize="17sp"
            android:clickable="true"
            android:onClick="register"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:focusable="true" />
    </LinearLayout>
    </LinearLayout>
</ScrollView>