<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:background="@color/color_app"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="50dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descLogin"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="5dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="20dp"/>

        <EditText
            android:id="@+id/l_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_username"
            android:textColorHint="@color/gray"
            android:textColor="@color/black"
            android:padding="10dip"
            android:background="@drawable/style_edittext"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"/>

        <EditText
            android:id="@+id/l_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:textColorHint="@color/gray"
            android:padding="10dip"
            android:background="@drawable/style_edittext"
            android:textColor="@color/black"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:clickable="true"
            android:onClick="toResetPassword"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:layout_gravity="end"
            android:layout_marginTop="15dp"
            android:layout_marginRight="25dp"/>

        <Button
            android:layout_width="320dp"
            android:layout_height="55dp"
            android:text="@string/login"
            android:onClick="login"
            android:clickable="true"
            android:textSize="17dp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"/>

        <Button
            android:layout_width="320dp"
            android:layout_height="55dp"
            android:text="@string/register"
            android:onClick="toRegister"
            android:textSize="17dp"
            android:clickable="true"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

    </LinearLayout>
    </LinearLayout>

</ScrollView>