<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ResetPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:background="@color/color_app"
        android:gravity="center_vertical"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resetPassword"
            android:textSize="50dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resetPasswordDesc"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="5dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="20dp"/>

        <EditText
            android:id="@+id/res_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:padding="10dip"
            android:background="@drawable/style_edittext"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:inputType="textEmailAddress"
            android:layout_marginLeft="20dp"
            android:maxLines="1"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"/>
        <Button
            android:layout_width="320dp"
            android:layout_height="55dp"
            android:text="@string/send"
            android:clickable="true"
            android:onClick="resetPassword"
            android:textSize="17dp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"/>

    </LinearLayout>

</LinearLayout>