<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/color_app"
    android:gravity="center">


    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/chat_icon"
        android:contentDescription="@string/descriptionImg1" />
    <Button
        android:id="@+id/login"
        android:layout_width="320dp"
        android:layout_height="56dp"
        android:text="@string/login"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/color_app"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:onClick="toLogin"
        android:layout_marginTop="50dp"
        />
    <Button
        android:id="@+id/register"
        android:layout_width="320dp"
        android:layout_height="56dp"
        android:text="@string/register"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/color_app"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:onClick="toRegister"
        android:layout_marginTop="10dp"
        />
</LinearLayout>