<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/color_app"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:cardCornerRadius="120dp"
                android:layout_margin="10dp"
                >
                <ImageView
                    android:id="@+id/prof_pic"
                    android:layout_centerHorizontal="true"
                    android:layout_height="120dp"
                    android:layout_width="120dp"
                    android:scaleType="centerCrop"
                    />
            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                >
                <TextView
                    android:id="@+id/p_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:id="@+id/p_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:textColor="@color/white"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="5dp"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="17dp"
                android:textColor="@color/gray"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                />
            <TextView
                android:id="@+id/p_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="17dp"
                android:textStyle="bold"
                android:textColor="@color/gray"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                />
            <TextView
                android:id="@+id/p_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_gender"
                android:textSize="17dp"
                android:textStyle="bold"
                android:textColor="@color/gray"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                />
            <TextView
                android:id="@+id/p_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"/>
            <Button
                android:id="@+id/btn_prof"
                android:layout_width="320dp"
                android:layout_height="55dp"
                android:clickable="true"
                android:textSize="17dp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>